test_suite5/ALAN/test_suite/alan-2022-examples/failing/007020_mutation.alan
source H begin put not ">" end
